move nav bar items into left and right to fix alignment

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -17,3 +17,15 @@ nav {
 .nav-text-light {
   font-weight: lighter;
 }
+
+.nav-right {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.nav-left {
+  display: flex;
+  flex-direction: column;
+  align-self: flex-end;
+}
